--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
         "express": "~4.11.0",
         "ejs": "~2.1.4",
         "cookie-session": "~1.1.0",
-        "body-parser": "~1.10.1"
+        "body-parser": "~1.10.1",
 		"mssql":"~2.1.0"
     },
     "author": "Obsidian",
